--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
 				<p>that you experience today</p>
 				<p>Finally, I'd like to wish you one more time</p>
 				<p>a very happy birthday Jyoti :)) </p>
+				<p><a href="https://itsjyotisbirthdaytoday.vercel.app/messageforjyoti.html">CLICK ME!!!</a></p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
